--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+mio = "0.8.11"
 h2 = "0.4.2"
 anyhow = "1.0.79"
 askama = "0.12.1"
@@ -27,11 +28,23 @@ phf = { version = "0.11.2", features = ["macros"] }
 rand = "0.8.5"
 rayon = "1.8.0"
 regex = "1.10.2"
-reqwest = { version = "0.11.23", default_features=false, features = ["rustls-tls", "serde_json", "async-compression", "json", "trust-dns", "gzip", "brotli"] }
+reqwest = { version = "0.11.23", default_features = false, features = [
+  "rustls-tls",
+  "serde_json",
+  "async-compression",
+  "json",
+  "trust-dns",
+  "gzip",
+  "brotli",
+] }
 scraper = "0.18.1"
 serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.110"
-sqlx = { version = "0.7.3", default_features=false, features = ["postgres", "runtime-tokio-rustls", "macros"] }
+sqlx = { version = "0.7.3", default_features = false, features = [
+  "postgres",
+  "runtime-tokio-rustls",
+  "macros",
+] }
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["codec", "full"] }
 tower = { version = "0.4.13", features = ["util"] }
@@ -42,4 +55,4 @@ typenum = "1.17.0"
 
 [dev-dependencies]
 h2 = "0.4.2"
-
+mio = "0.8.11"
